--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -36,6 +38,9 @@
       "standard",
       "standard-jsx",
       "standard-react"
-    ]
+    ],
+    "rules": {
+      "react/prop-types": "off"
+    }
   }
 }
