--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     ],
     "rules": {
       "react/prop-types": "off"
+    },
+    
+    "globals": {
+      "localStorage": true
     }
   }
 }
