--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^6.3.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "yup": "^0.32.11"
   },
@@ -43,7 +44,6 @@
     "rules": {
       "react/prop-types": "off"
     },
-    
     "globals": {
       "localStorage": true
     }
