--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.10",
@@ -46,7 +47,8 @@
     },
     "globals": {
       "localStorage": true,
-      "alert": true
+      "alert": true,
+      "confirm": true
     }
   }
 }
