--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "sweetalert2": "11.4.8",
+    "sweetalert2-react-content": "5.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
